--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <sonar.exclusions>src/main/java/de/feu/**, </sonar.exclusions>
     </properties>
 
     <build>
